--- a/sample/01/workspace/index.html
+++ b/sample/01/workspace/index.html
@@ -102,7 +102,7 @@
                     <li><a href="ch01-buildup/todolist/02/">02 등록</a></li>
                     <li><a href="ch01-buildup/todolist/03/">03 수정</a></li>
                     <li><a href="ch01-buildup/todolist/04/">04 삭제, 완성</a></li>
-                    <li><a href="ch01-buildup/todolist/05/">05 render 함수로 렌더링</a></li>
+                    <li><a href="ch01-buildup/todolist/05/">05 데이터를 기반으로 화면 렌더링</a></li>
                   </ul>
                 </li>
                 <li>Todo List (vanillaJS + Lib)
