--- a/workspace-ins/index.html
+++ b/workspace-ins/index.html
@@ -102,7 +102,7 @@
                     <li><a href="ch01-buildup/todolist/02/">02 등록</a></li>
                     <li><a href="ch01-buildup/todolist/03/">03 수정</a></li>
                     <li><a href="ch01-buildup/todolist/04/">04 삭제, 완성</a></li>
-                    <li><a href="ch01-buildup/todolist/05/">05 render 함수로 렌더링</a></li>
+                    <li><a href="ch01-buildup/todolist/05/">05 데이터를 기반으로 화면 리렌더링</a></li>
                   </ul>
                 </li>
                 <li>Todo List (vanillaJS + Lib)
@@ -130,7 +130,9 @@
             </li>
             <li>03 React
               <ul>
-                <li><a href="ch01-buildup/react/01/">01 Counter - React</a></li>
+                <li><a href="ch01-buildup/react/counter/sample/">Counter - React Sample</a></li>
+                <li><a href="ch01-buildup/react/todolist/sample/">Todo List - React Sample</a></li>
+                <li><a href="ch01-buildup/react/01/">01 Counter - React로 구현</a></li>                
                 <li><a href="ch01-buildup/react/02/">02 Todo List - React로 UI 구성</a></li>
                 <li><a href="ch01-buildup/react/03/">03 Todo List - React 컴포넌트 분리</a></li>
                 <li><a href="ch01-buildup/react/04/">04 Todo List - React 기능 추가</a></li>
