--- a/workspace/ch01-buildup/todolist/03/index.html
+++ b/workspace/ch01-buildup/todolist/03/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="todo">
       <header>
-        <h1>Todo List - 01 목록 조회 :)</h1>
+        <h1>Todo List - 03 수정 :)</h1>
         <p>파일 경로: <span id="filepath"></span></p>
       </header>
       <div id="main">
@@ -86,83 +86,33 @@
 
       // 한건의 Todo 객체를 받아서 DOM 객체로 만들어 반환
       function getTodoItemElem(item) {
-        // return (`
-        //   <li data-num="2">
-        //     <span>1</span>
-        //     <span onclick="toggleDone(1)"><s>샘플1</s></span>
-        //     <button type="button" onclick="deleteItem(1)">삭제</button>
-        //   </li>
-        // `);
-
-        /* 엘리먼트 노드 생성 */
-        // <li></li> 생성
         const liElem = document.createElement("li");
-
-        // <span></span> 생성
         const numSpan = document.createElement("span");
-
-        // <span></span> 생성
         const titleSpan = document.createElement("span");
-
-        // <button></button> 생성
         const deleteBtn = document.createElement("button");
 
-        /* 텍스트 노드 생성 */
-        // "4" 생성
-        const numTxt = document.createTextNode(4);
-
-        // "React 프로젝트" 생성
-        const titleTxt = document.createTextNode("React 프로젝트");
-
-        // "삭제" 생성
+        const numTxt = document.createTextNode(item.num);
+        const titleTxt = document.createTextNode(item.title);
         const deleteTxt = document.createTextNode("삭제");
 
-        /* 엘리먼트 노드에 텍스트 노드 추가 */
-        // <span>4</span>
         numSpan.appendChild(numTxt);
-
-        // 완료 여부에 따라서 <span>React 프로젝트</span> 또는 <span><s>React 프로젝트</s></span>
         if (item.done) {
-          // <span><s>React 프로젝트</s></span>
           const sElem = document.createElement("s");
           titleSpan.appendChild(sElem);
           sElem.appendChild(titleTxt);
         } else {
-          // <span>React 프로젝트</span>
           titleSpan.appendChild(titleTxt);
         }
-
-        // <button>삭제</button>
         deleteBtn.appendChild(deleteTxt);
 
-        /* 엘리먼트 노드에 속성 추가 */
-        // <li data-num="4"></li>
-        liElem.dataset.num = 4;
-
-        // <span onclick="toggleDone(4)">React 프로젝트</span>
-        titleSpan.setAttribute("onclick", "toggleDone(4)");
-
-        // <button type="button">삭제</button>
+        liElem.dataset.num = item.num;
+        titleSpan.setAttribute("onclick", `toggleDone(${item.num})`);
         deleteBtn.setAttribute("type", "button");
+        deleteBtn.setAttribute("onclick", `deleteItem(${item.num})`);
 
-        // <button type="button" onclick="deleteItem(4)">삭제</button>
-        deleteBtn.setAttribute("onclick", "deleteItem(4)");
-
-        /* 엘리먼트 노드 조립 */
-        // <li data-num="4">
-        //   <span>4</span>
-        // </li>
-
-        // <li data-num="4">
-        //   <span>4</span>
-        //   <span onclick="toggleDone(4)">React 프로젝트</span>
-        // </li>
-
-        // <li data-num="4">
-        //   <span>4</span>
-        //   <span onclick="toggleDone(4)">React 프로젝트</span>
-        //   <button type="button" onclick="deleteItem(4)">삭제</button>
-        // </li>
+        liElem.appendChild(numSpan);
+        liElem.appendChild(titleSpan);
+        liElem.appendChild(deleteBtn);
 
         // li 노드 반환
         return liElem;
@@ -173,18 +123,33 @@
         console.log("할일 추가");
         // 데이터 갱신, itemList에 item 추가
         // num, title, done 속성을 가진 item 객체 생성
+        const item = {
+          num: ++lastNum,
+          title,
+          done: false,
+        };
+        itemList.push(item);
 
         // 화면 갱신, item을 DOM 객체로 만들어 ul 요소에 자식으로 추가
+        const newItemElem = getTodoItemElem(item);
+        itemListElem.appendChild(newItemElem);
       }
 
       // 추가 버튼 클릭 이벤트 핸들러
       const handleAdd = () => {
         console.log("추가 버튼 클릭");
+        const inputElem = document.querySelector(".todoinput > input");
+        if (inputElem.value.trim() !== "") {
+          addItem(inputElem.value.trim());
+          inputElem.value = "";
+          inputElem.focus();
+        }
       };
 
       // 엔터 이벤트 핸들러
       const handleAddKeydown = (event) => {
         console.log("keydown", event);
+        if (event.key === "Enter") handleAdd();
       };
 
       // 완료/미완료 처리
@@ -192,15 +157,25 @@
         console.log(num, "완료/미완료");
         // 데이터 갱신, itemList에서 num에 해당하는 item의 done 값을 수정
         // itemList에서 num 값으로 item 조회
+        // let selectedItem;
+        // itemList.forEach((item) => {
+        //   if(item.num === num){
+        //     selectedItem = item;
+        //   }
+        // });
+
+        const selectedItem = itemList.find((item) => item.num === num);
+        console.log(selectedItem);
 
         // item의 done 값을 수정
+        selectedItem.done = !selectedItem.done;
 
         // 화면 갱신, done 값에 따라서 <s> 추가 또는 삭제
       }
 
       // 할일 삭제
       function deleteItem(num) {
-        console.log("할일 삭제");
+        console.log(num, "할일 삭제");
         // 데이터 갱신, itemList에서 num에 해당하는 item 삭제
 
         // 화면 갱신, 화면에서 num에 해당하는 item 제거
