--- a/workspace-ins/ch01-buildup/todolist/04/index.html
+++ b/workspace-ins/ch01-buildup/todolist/04/index.html
@@ -191,9 +191,10 @@
     function deleteItem(num){
       console.log(num, '할일 삭제');
       // 데이터 갱신, itemList에서 num에 해당하는 item 삭제
-
+      const index = itemList.findIndex(item => item.num === num);
+      itemList.splice(index, 1);
       // 화면 갱신, 화면에서 num에 해당하는 item 제거
-
+      document.querySelector(`.todolist > li[data-num="${num}"]`).remove();
     }
   </script>
 </body>
