--- a/workspace/ch01-buildup/counter/07/index.html
+++ b/workspace/ch01-buildup/counter/07/index.html
@@ -13,6 +13,7 @@
 
       // 헤더 컴포넌트
       function Header() {
+        console.log("\tHeader 호출됨");
         return Reaction.createElement(
           "header",
           null,
@@ -28,6 +29,7 @@
 
       // Counter 컴포넌트
       function Counter() {
+        console.log("\tCounter 호출됨");
         // let count = 0;
 
         const [count, setCount] = Reaction.useState(0);
@@ -62,6 +64,7 @@
 
       // App 컴포넌트(어플리케이션의 시작점)
       function App() {
+        console.log("App 호출됨");
         return Reaction.createElement("div", { id: "app" }, Header, Counter);
       }
 
