--- a/workspace/ch01-buildup/counter/07/index.html
+++ b/workspace/ch01-buildup/counter/07/index.html
@@ -32,6 +32,10 @@
         console.log("\tCounter 호출됨");
         // let count = 0;
 
+        // const state = Reaction.useState(0);
+        // const count = state[0];
+        // const setCount = state[1];
+
         const [count, setCount] = Reaction.useState(0);
 
         // 카운터 감소
