--- a/workspace-ins/ch01-buildup/react/05/index.html
+++ b/workspace-ins/ch01-buildup/react/05/index.html
@@ -53,14 +53,12 @@
       // 상태가 수정되면 화면이 리렌더링되는 리액트
       const [itemList, setItemList] = React.useState(initItemList);
 
-      let lastNum = itemList.length;
-      
       // 할일 추가
       function addItem(title){
         console.log('할일 추가');
         // 데이터 갱신, itemList에 item 추가
         // num, title, done 속성을 가진 item 객체 생성
-        const item = { num: ++lastNum, title, done: false };
+        const item = { num: itemList[itemList.length-1]?.num + 1 || 1, title, done: false };
         // 객체의 불변성을 유지하기 위한 코드
         setItemList([ ...itemList, item ]);
 
@@ -72,21 +70,27 @@
       function toggleDone(num){
         console.log(num, '완료/미완료');
         // 데이터 갱신, itemList에서 num에 해당하는 item의 done 값을 수정
-        const selectedItem = itemList.find(item => item.num === num);
-        // item의 done 값을 수정
-        selectedItem.done = !selectedItem.done;
+        // 객체의 불변성을 위해서
+        const newItemList = itemList.map(item => item.num === num ? { ...item, done: !item.done } : item);
+        setItemList(newItemList);
 
-        render(); // 데이터를 기반으로 화면 갱신
+        // const selectedItem = itemList.find(item => item.num === num);
+        // // item의 done 값을 수정
+        // selectedItem.done = !selectedItem.done;
+        // console.log(Object.is(itemList, [ ...itemList ]));
+        // setItemList([ ...itemList ]);
       }
 
       // 할일 삭제
       function deleteItem(num){
         console.log(num, '할일 삭제');
         // 데이터 갱신, itemList에서 num에 해당하는 item 삭제
-        const index = itemList.findIndex(item => item.num === num);
-        itemList.splice(index, 1);
-        
-        render(); // 데이터를 기반으로 화면 갱신
+        const newItemList = itemList.filter(item => item.num !== num );
+        setItemList(newItemList);
+
+        // const index = itemList.findIndex(item => item.num === num);
+        // itemList.splice(index, 1);
+        // setItemList(itemList);
       }
 
       return (
@@ -96,14 +100,13 @@
               <li>
                 <h2>쇼핑 목록</h2>
                 <TodoInput addItem={ addItem } />
-                <TodoList itemList={ itemList } />
+                <TodoList itemList={ itemList } toggleDone={ toggleDone } deleteItem={ deleteItem } />
               </li>
             </ul>
           </div>
         </div>
       );
     }
-
     function TodoInput({ addItem }){
       // 추가 버튼 클릭 이벤트 핸들러
       const handleAdd = () => {
@@ -129,10 +132,9 @@
         </div>
       );
     }
-
-    function TodoList({ itemList }){
+    function TodoList({ itemList, toggleDone, deleteItem }){
       const list = itemList.map((item) => {
-        return <TodoItem key={ item.num } item={ item } />;
+        return <TodoItem key={ item.num } item={ item } toggleDone={ toggleDone } deleteItem={ deleteItem } />;
       });
       return(
         <ul className="todolist">
@@ -140,13 +142,13 @@
         </ul>
       );
     }
-
-    function TodoItem({ item }){
+    function TodoItem({ item, toggleDone, deleteItem }){
+      console.log(item.num, '리렌더링.');
       return (
         <li>
           <span>{ item.num }</span>
-          <span>{ item.done ? <s>{ item.title }</s> : item.title }</span>
-          <button type="button">삭제</button>
+          <span onClick= { () => toggleDone(item.num) }>{ item.done ? <s>{ item.title }</s> : item.title }</span>
+          <button type="button" onClick={ () => deleteItem(item.num) }>삭제</button>
         </li>
       );
     }
