--- a/workspace/ch01-buildup/todolist/09/index.html
+++ b/workspace/ch01-buildup/todolist/09/index.html
@@ -8,156 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-
-    <script type="module">
-      import Reaction from "../reaction.js";
-
-      /*
-          ┌───────── App ──────────┐
-          │           │            │
-        Header       Todo        Footer
-                      │
-                  ┌───┴────┐
-            TodoInput   TodoList
-                           │
-                        TodoItem
-    */
-
-      function Header() {
-        return Reaction.createElement(
-          "header",
-          null,
-          Reaction.createElement("h1", null, "Todo List - 08 상태(데이터) 변경시 화면 리렌더링 :)"),
-          Reaction.createElement(
-            "p",
-            null,
-            "파일 경로: ",
-            Reaction.createElement("span", { id: "filepath" }, `ch${location.href.split("/ch")[1]}index.html`)
-          )
-        );
-      }
-
-      function Footer() {
-        return Reaction.createElement(
-          "footer",
-          null,
-          Reaction.createElement("p", null, "멋쟁이 사자처럼 FrontEnd BootCamp")
-        );
-      }
-
-      function TodoInput(props) {
-        // 추가 버튼 클릭 이벤트 핸들러
-        const handleAdd = () => {
-          console.log("추가 버튼 클릭");
-          const inputElem = document.querySelector(".todoinput > input");
-          if (inputElem.value.trim() !== "") {
-            props.addItem(inputElem.value.trim());
-            inputElem.value = "";
-            inputElem.focus();
-          }
-        };
-
-        // 엔터 이벤트 핸들러
-        const handleAddKeydown = (event) => {
-          console.log("keydown", event);
-          if (event.key === "Enter") handleAdd();
-        };
-
-        return Reaction.createElement(
-          "div",
-          { class: "todoinput" },
-          Reaction.createElement("input", {
-            type: "text",
-            autofocus: true,
-            onkeydown: (event) => handleAddKeydown(event),
-          }),
-          Reaction.createElement("button", { type: "button", onclick: handleAdd }, "추가")
-        );
-      }
-
-      function TodoItem({ item, toggleDone, deleteItem }) {
-        return Reaction.createElement(
-          "li",
-          { "data-num": item.num },
-          Reaction.createElement("span", null, item.num),
-          Reaction.createElement(
-            "span",
-            { onclick: () => toggleDone(item.num) },
-            item.done ? Reaction.createElement("s", null, item.title) : item.title
-          ),
-          Reaction.createElement("button", { type: "button", onclick: () => deleteItem(item.num) }, "삭제")
-        );
-      }
-
-      function TodoList({ itemList, toggleDone, deleteItem }) {
-        const items = itemList.map((item) => TodoItem({ item, toggleDone, deleteItem }));
-        return Reaction.createElement("ul", { class: "todolist" }, items);
-      }
-
-      function Todo(props) {
-        return Reaction.createElement(
-          "div",
-          { id: "main" },
-          Reaction.createElement(
-            "div",
-            { id: "container" },
-            Reaction.createElement(
-              "ul",
-              null,
-              Reaction.createElement(
-                "li",
-                null,
-                Reaction.createElement("h2", null, "할일 목록"),
-                TodoInput(props),
-                TodoList(props)
-              )
-            )
-          )
-        );
-      }
-
-      function App() {
-        // 샘플 목록
-        const initItemList = [
-          { num: 1, title: "자바스크립트 공부", done: true },
-          { num: 2, title: "JS 프로젝트", done: true },
-          { num: 3, title: "React 공부", done: false },
-        ];
-
-        const [itemList, setItemList] = Reaction.useState(initItemList);
-
-        // 할일 추가
-        function addItem(title) {
-          console.log("할일 추가");
-          const item = { num: itemList[itemList.length - 1]?.num + 1 || 1, title, done: false };
-          setItemList([...itemList, item]);
-        }
-
-        // 완료/미완료 처리
-        function toggleDone(num) {
-          console.log(num, "완료/미완료");
-          const newItemList = itemList.map((item) => (item.num === num ? { ...item, done: !item.done } : item));
-
-          setItemList(newItemList);
-        }
-
-        // 할일 삭제
-        function deleteItem(num) {
-          console.log(num, "할일 삭제");
-          const newItemList = itemList.filter((item) => item.num !== num);
-          setItemList(newItemList);
-        }
-
-        return Reaction.createElement(
-          "div",
-          { id: "todo" },
-          Header,
-          Todo({ itemList, addItem, toggleDone, deleteItem }),
-          Footer
-        );
-      }
-
-      Reaction.createRoot(document.querySelector("#root")).render(App);
-    </script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
