--- a/workspace/ch02-start/hello/02.html
+++ b/workspace/ch02-start/hello/02.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hello - React</title>
+    <link rel="icon" href="/assets/favicon.ico" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello - React</title>
-  <link rel="icon" href="/assets/favicon.ico">
-</head>
+  <body>
+    <div id="root"></div>
 
-<body>
-  <div>
-    <h1>02 Hello DOM</h1>
-  </div>
+    <script>
+      function App() {
+        const h1 = document.createElement("h1");
+        const txt = document.createTextNode("02 Hello DOM");
+        h1.appendChild(txt);
+        return h1;
+      }
 
-  <script>
-    function App(){
-      
-    }
-  </script>
-</body>
-
+      document.getElementById("root").appendChild(App());
+    </script>
+  </body>
 </html>
