--- a/workspace/ch02-start/hello/03.html
+++ b/workspace/ch02-start/hello/03.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hello - React</title>
+    <link rel="icon" href="/assets/favicon.ico" />
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello - React</title>
-  <link rel="icon" href="/assets/favicon.ico">
-</head>
+  <body>
+    <div id="root"></div>
+    <script>
+      function App() {
+        // <h1>Hello DOM</h1>
+        return React.createElement("h1", null, "03 Hello React");
+      }
 
-<body>
-  <div id="root"></div>
-
-  <script>
-    function App(){
-      // <h1>Hello DOM</h1>
-      const h1 = document.createElement('h1');
-      const txt = document.createTextNode('02 Hello DOM');
-      h1.appendChild(txt);
-      return h1;
-    }
-
-    document.getElementById('root').appendChild(App());
-  </script>
-</body>
-
+      ReactDOM.createRoot(document.getElementById("root")).render(React.createElement(App));
+    </script>
+  </body>
 </html>
